Update BrokenLinks.java